@@ -7,13 +7,16 @@ package com.serotonin.m2m2.vo.event.detector;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 
 import org.apache.commons.lang3.StringUtils;
 
 import com.serotonin.json.JsonException;
 import com.serotonin.json.JsonReader;
 import com.serotonin.json.ObjectWriter;
+import com.serotonin.json.spi.JsonProperty;
 import com.serotonin.json.type.JsonObject;
 import com.serotonin.m2m2.i18n.TranslatableJsonException;
 import com.serotonin.m2m2.i18n.TranslatableMessage;
@@ -23,6 +26,7 @@ import com.serotonin.m2m2.rt.event.detectors.AbstractEventDetectorRT;
 import com.serotonin.m2m2.vo.AbstractVO;
 import com.serotonin.m2m2.vo.event.AbstractEventHandlerVO;
 import com.serotonin.m2m2.vo.event.EventTypeVO;
+import com.serotonin.m2m2.vo.role.Role;
 
 /**
  * @author Terry Packer
@@ -33,6 +37,11 @@ public abstract class AbstractEventDetectorVO extends AbstractVO {
     private static final long serialVersionUID = 1L;
 
     public static final String XID_PREFIX = "ED_";
+
+    @JsonProperty
+    private Set<Role> editRoles = Collections.emptySet(); //Roles for those who can edit.
+    @JsonProperty
+    private Set<Role> readRoles = Collections.emptySet(); //Roles for those who can view the resulting report
 
     /* Source of the detector */
     protected int sourceId;
@@ -134,6 +143,22 @@ public abstract class AbstractEventDetectorVO extends AbstractVO {
         this.name = alias;
     }
 
+    public Set<Role> getEditRoles() {
+        return editRoles;
+    }
+
+    public void setEditRoles(Set<Role> editRoles) {
+        this.editRoles = editRoles;
+    }
+
+    public Set<Role> getReadRoles() {
+        return readRoles;
+    }
+
+    public void setReadRoles(Set<Role> readRoles) {
+        this.readRoles = readRoles;
+    }
+
     public int getSourceId(){
         return this.sourceId;
     }
@@ -149,6 +174,7 @@ public abstract class AbstractEventDetectorVO extends AbstractVO {
         return addedEventHandlers;
     }
 
+    @SuppressWarnings("unchecked")
     public <T extends AbstractEventDetectorVO> EventDetectorDefinition<T> getDefinition() {
         return (EventDetectorDefinition<T>) definition;
     }
